Updated man page

--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Fri Feb 12 20:14:43 2016 -->
+<!-- CreationDate: Sat Aug  6 15:28:59 2016 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -1026,8 +1026,8 @@ displayed on the left side of the status bar can be replaced
 with the output of a user-provided script, which is called
 by sxiv whenever an image gets loaded. The path of this
 script is <i>$XDG_CONFIG_HOME/sxiv/exec/image-info</i> and
-the first argument to this script is the path of the loaded
-image.</p>
+the arguments given to it are: 1) path to image file, 2)
+image width, 3) image height.</p>
 
 <p style="margin-left:11%; margin-top: 1em">There is also
 an example script installed together with sxiv as
