Update man page

--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Aug  6 15:28:59 2016 -->
+<!-- CreationDate: Sun Oct 30 19:25:54 2016 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -51,11 +51,12 @@ Simple X Image Viewer</p>
 
 
 <p style="margin-left:11%; margin-top: 1em"><b>sxiv</b>
-[<b>&minus;abcfhioqrtvZ</b>] [<b>&minus;G</b> <i>GAMMA</i>]
-[<b>&minus;g</b> <i>GEOMETRY</i>] [<b>&minus;N</b>
-<i>NAME</i>] [<b>&minus;n</b> <i>NUM</i>] [<b>&minus;S</b>
-<i>DELAY</i>] [<b>&minus;s</b> <i>MODE</i>] [<b>&minus;z</b>
-<i>ZOOM</i>] <i>FILE</i>...</p>
+[<b>&minus;abcfhioqrtvZ</b>] [<b>&minus;e</b> <i>WID</i>]
+[<b>&minus;G</b> <i>GAMMA</i>] [<b>&minus;g</b>
+<i>GEOMETRY</i>] [<b>&minus;N</b> <i>NAME</i>]
+[<b>&minus;n</b> <i>NUM</i>] [<b>&minus;S</b> <i>DELAY</i>]
+[<b>&minus;s</b> <i>MODE</i>] [<b>&minus;z</b> <i>ZOOM</i>]
+<i>FILE</i>...</p>
 
 <h2>DESCRIPTION
 <a name="DESCRIPTION"></a>
@@ -85,11 +86,11 @@ window manager.</p>
        cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="9%">
 
 
 <p style="margin-top: 1em"><b>&minus;a</b></p></td>
-<td width="8%"></td>
+<td width="2%"></td>
 <td width="78%">
 
 
@@ -97,22 +98,22 @@ window manager.</p>
 images.</p> </td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="9%">
 
 
 <p><b>&minus;b</b></p></td>
-<td width="8%"></td>
+<td width="2%"></td>
 <td width="78%">
 
 
 <p>Do not show info bar on bottom of window.</p></td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="9%">
 
 
 <p><b>&minus;c</b></p></td>
-<td width="8%"></td>
+<td width="2%"></td>
 <td width="78%">
 
 
@@ -120,11 +121,23 @@ images.</p> </td></tr>
 directory and exit.</p></td></tr>
 <tr valign="top" align="left">
 <td width="11%"></td>
-<td width="3%">
+<td width="9%">
+
+
+<p><b>&minus;e</b> <i>WID</i></p></td>
+<td width="2%"></td>
+<td width="78%">
+
+
+<p>Embed sxiv&rsquo;s window into window whose ID is
+<i>WID</i>.</p> </td></tr>
+<tr valign="top" align="left">
+<td width="11%"></td>
+<td width="9%">
 
 
 <p><b>&minus;f</b></p></td>
-<td width="8%"></td>
+<td width="2%"></td>
 <td width="78%">
 
 
