Update man page

--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sun Oct 30 19:25:54 2016 -->
+<!-- CreationDate: Thu Dec  1 21:42:45 2016 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -247,7 +247,8 @@ view.</p> </td></tr>
 <i>DELAY</i></p>
 
 <p style="margin-left:22%;">Start in slideshow mode. Set
-the delay between images to DELAY seconds.</p>
+the delay between images to <i>DELAY</i> seconds.
+<i>DELAY</i> may be a floating point number.</p>
 
 <p style="margin-left:11%;"><b>-s</b> <i>MODE</i></p>
 
