--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Fri Oct  6 10:18:14 2017 -->
+<!-- CreationDate: Fri Oct  6 10:26:23 2017 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -1012,9 +1012,10 @@ mouse mappings are available in image mode: <br>
 General: <b><br>
 Button3</b></p>
 
-<p style="margin-left:22%;">Navigate image list:</p>
+<p style="margin-left:22%;">Switch to thumbnail mode.</p>
 
-<p style="margin-left:11%;"><b>Button1</b></p>
+<p style="margin-left:11%;">Navigate image list: <b><br>
+Button1</b></p>
 
 <p style="margin-left:22%;">Go to the next image if the
 mouse cursor is in the right part of the window or to the
