--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Sat Jan 26 14:40:34 2019 -->
+<!-- CreationDate: Fri Apr 19 15:58:16 2019 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -26,6 +26,7 @@
 <a href="#OPTIONS">OPTIONS</a><br>
 <a href="#KEYBOARD COMMANDS">KEYBOARD COMMANDS</a><br>
 <a href="#MOUSE COMMANDS">MOUSE COMMANDS</a><br>
+<a href="#CONFIGURATION">CONFIGURATION</a><br>
 <a href="#STATUS BAR">STATUS BAR</a><br>
 <a href="#EXTERNAL KEY HANDLER">EXTERNAL KEY HANDLER</a><br>
 <a href="#THUMBNAIL CACHING">THUMBNAIL CACHING</a><br>
@@ -1029,6 +1030,40 @@ ScrollUp</b></p>
 
 <p style="margin-left:22%;">Zoom out.</p>
 
+<h2>CONFIGURATION
+<a name="CONFIGURATION"></a>
+</h2>
+
+
+<p style="margin-left:11%; margin-top: 1em">The following X
+resources are supported: <b><br>
+background</b></p>
+
+<p style="margin-left:22%;">Color of the window background
+and bar foreground</p>
+
+<p style="margin-left:11%;"><b>foreground</b></p>
+
+<p style="margin-left:22%;">Color of the window foreground
+and bar background</p>
+
+<table width="100%" border="0" rules="none" frame="void"
+       cellspacing="0" cellpadding="0">
+<tr valign="top" align="left">
+<td width="11%"></td>
+<td width="6%">
+
+
+<p><b>font</b></p></td>
+<td width="5%"></td>
+<td width="30%">
+
+
+<p>Name of Xft bar font</p></td>
+<td width="48%">
+</td></tr>
+</table>
+
 <h2>STATUS BAR
 <a name="STATUS BAR"></a>
 </h2>
@@ -1124,8 +1159,8 @@ Max Voit        &lt;mvdev at with-eyes.net&gt;</pre>
 </h2>
 
 
-<p style="margin-left:11%; margin-top: 1em"><b>feh</b>(1),
-<b>qiv</b>(1)</p>
+<p style="margin-left:11%; margin-top: 1em"><b>X</b>(7),
+<b>xrdb</b>(1)</p>
 <hr>
 </body>
 </html>
