Update man page

--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.3 -->
-<!-- CreationDate: Fri Apr 19 15:58:16 2019 -->
+<!-- CreationDate: Fri Apr 19 16:13:19 2019 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -1063,6 +1063,9 @@ and bar background</p>
 <td width="48%">
 </td></tr>
 </table>
+
+<p style="margin-left:11%;">Please see xrdb(1) on how to
+change them.</p>
 
 <h2>STATUS BAR
 <a name="STATUS BAR"></a>
