--- a/sxiv.1.html
+++ b/sxiv.1.html
@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.22.4 -->
-<!-- CreationDate: Thu Jan 16 12:46:32 2020 -->
+<!-- CreationDate: Mon Jan 16 13:51:59 2023 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -1128,7 +1128,7 @@ the cache directory to remove empty subdirectories:</p>
 
 
 <p style="margin-left:11%; margin-top: 1em">Bert Muennich
-&lt;ber.t at posteo.de&gt;</p>
+&lt;xyb3rt at gmail.com&gt;</p>
 
 <h2>CONTRIBUTORS
 <a name="CONTRIBUTORS"></a>
@@ -1147,7 +1147,7 @@ Max Voit &lt;mvdev at with-eyes.net&gt;</p>
 
 
 
-<p style="margin-left:11%; margin-top: 1em">https://github.com/muennich/sxiv</p>
+<p style="margin-left:11%; margin-top: 1em">https://github.com/xyb3rt/sxiv</p>
 
 <h2>SEE ALSO
 <a name="SEE ALSO"></a>
